fixed spacing

--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -103,7 +103,7 @@ body {
   font-family: menlo;
   font-style: regular;
   text-align: left;
-  padding-left: 20px;
+  text-align: center;
 }
 
 footer {
